# SuomiGeoData

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements-gh-action.txt  requirements-github.txt
.github/: FUNDING.yml
.github/workflows/: linting.yml  testing.yml  typing.yml
SuomiGeoData/: __init__.py  core.py  paituli.py  syke.py
SuomiGeoData/data/: example_area.dbf  example_area.shp  example_area.shx  nls_dem_index.shp  nls_dem_index.shx  nls_td_index.shp  nls_td_index.shx  tdb_metadata.xlsx
SuomiGeoData/data/d_paituli/: dem_index.dbf  shape_index.dbf
docs/: SuomiGeoData.rst  changelog.rst  conf.py  dem.rst  index.rst  installation.rst  introduction.rst  landcover.rst  modules.rst  quickstart.rst  requirements-docs.txt  requirements.txt  submodules.rst  tdb.rst
tests/: test_paituli.py  test_suomigeodata.py
