[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "SuomiGeoData"
description = "Downloading and analyzing geospatial data from Finland, that is Suomi."
authors = [
  { name="Debasish Pal", email="bestdebasish@gmail.com" },
]
dependencies = [
    "geopandas",
    "rasterio",
    "requests",
    "openpyxl",
    "xlsxwriter"
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Education",
    "Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: GIS",
	"Topic :: Scientific/Engineering :: Hydrology"
]
dynamic = ["version"]
keywords = [
	"Paituli",
    "DEM",
	"Topography",
	"Data",
    "Download",
    "Analysis"
]


[project.urls]
"Homepage" = "https://github.com/debpal/SuomiGeoData"
"Documentation" = "https://suomigeodata.readthedocs.io/en/latest/"


[tool.setuptools.package-data]
SuomiGeoData = [
    "data/*"
]


[tool.setuptools.dynamic]
version = {attr = "SuomiGeoData.__version__"}


[tool.pytest.ini_options]
addopts = "-rA -Wignore::DeprecationWarning --cov=SuomiGeoData --cov-report=html:cov_SuomiGeoData --cov-report=term -s"
testpaths = [
    "tests"
]


[tool.mypy]
files = [
    "SuomiGeoData"
]
ignore_missing_imports = true
strict = true